Tried to fix some spacing issues

--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -26,7 +26,7 @@
 /* Each point on the chart, each a 12px circle with a light border */
 .data-point {
   background-color: white;
-  border: 2px solid lightblue;
+  border: 5px solid lightblue;
   border-radius: 50%;
   height: 60px; /*height and width originally 12px*/
   position: absolute;
@@ -47,7 +47,6 @@
 
   bottom: calc(var(--y) - 21.5px);
   left: calc(var(--x) - 24.5px);
-
 }
 
 .data-button {
@@ -236,7 +235,6 @@ body {
   background: white;
   border-color: rgb(61, 177, 173);
   border-style: solid;
-  border-width: 2px;
+  border-width: 5px;
   cursor: pointer;
-
 }
